--- a/package.json
+++ b/package.json
@@ -4,9 +4,25 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+    "format": "prettier .  --write"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.4"
+    "@nuxt/content": "^2.0.1",
+    "@nuxtjs/tailwindcss": "^5.1.2",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.2",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nuxt": "3.0.0-rc.4",
+    "prettier": "^2.7.1"
+  },
+  "dependencies": {
+    "@headlessui/vue": "^1.6.5",
+    "@heroicons/vue": "^1.0.6",
+    "http-proxy-middleware": "^2.0.6"
   }
 }
